--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-loader": "^16.0.0"
     },
     "dependencies": {
+        "v-pagination-3": "^0.1.7",
         "vue-pagination-2": "^3.1.0"
     }
 }
